Add logo in header

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/taylor1791/sample-app#readme",
   "devDependencies": {
     "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.9.0",
     "ng-annotate-loader": "^0.1.0",
     "raw-loader": "^0.5.1",
