--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist && webpack --bail --progress --profile",
-    "server": "npm run api & webpack-dev-server --history-api-fallback --inline --progress",
-    "start": "npm run server",
+    "start": "npm run api & npm run spa",
+    "spa": "webpack-dev-server --history-api-fallback --inline --progress",
     "api": "node server.js"
   },
   "repository": {
