--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-ui-router": "^0.2.18",
-    "normalize.css": "^3.0.3"
+    "jQuery": "^1.7.4",
+    "normalize.css": "^3.0.3",
+    "qtip2": "^3.0.2"
   }
 }
-
