Add pretty dates

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "angular": "^1.5.0",
     "angular-ui-router": "^0.2.18",
     "jQuery": "^1.7.4",
+    "moment": "^2.13.0",
     "normalize.css": "^3.0.3",
     "qtip2": "^3.0.2"
   }
