--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/taylor1791/sample-app#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^2.1.3",
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
